[gd_scene load_steps=4 format=2]

[ext_resource path="res://GUI/scr_debug.gd" type="Script" id=1]
[ext_resource path="res://GUI/fonts/arial/ARIAL.TTF" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 14
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 2 )

[node name="DebugController" type="Control"]
pause_mode = 2
anchor_left = 1.0
anchor_right = 1.0
margin_left = -283.0
margin_bottom = 224.0
rect_min_size = Vector2( 283, 121 )
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
self_modulate = Color( 1, 1, 1, 0.6 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1.0

[node name="Labels" type="VBoxContainer" parent="."]
margin_left = 12.0
margin_top = 9.0
margin_right = 40.0
margin_bottom = 40.0
custom_constants/separation = 8

[node name="OsInfo" type="VBoxContainer" parent="Labels"]
margin_right = 105.0
margin_bottom = 52.0
custom_constants/separation = 2

[node name="FPS_Label" type="Label" parent="Labels/OsInfo"]
margin_right = 105.0
margin_bottom = 16.0
custom_fonts/font = SubResource( 1 )
text = "FPS: 60"

[node name="Memory_Label" type="Label" parent="Labels/OsInfo"]
margin_top = 18.0
margin_right = 105.0
margin_bottom = 34.0
custom_fonts/font = SubResource( 1 )
text = "Memory:"

[node name="OS_Label" type="Label" parent="Labels/OsInfo"]
margin_top = 36.0
margin_right = 105.0
margin_bottom = 52.0
custom_fonts/font = SubResource( 1 )
text = "OS:"

[node name="SimInfo" type="VBoxContainer" parent="Labels"]
margin_top = 60.0
margin_right = 105.0
margin_bottom = 166.0
custom_constants/separation = 2

[node name="Seed_Label" type="Label" parent="Labels/SimInfo"]
margin_right = 105.0
margin_bottom = 16.0
custom_fonts/font = SubResource( 1 )
text = "Seed: "

[node name="World_Size_Label" type="Label" parent="Labels/SimInfo"]
margin_top = 18.0
margin_right = 105.0
margin_bottom = 34.0
custom_fonts/font = SubResource( 1 )
text = "World Size: "

[node name="Count_Label" type="Label" parent="Labels/SimInfo"]
margin_top = 36.0
margin_right = 105.0
margin_bottom = 52.0
custom_fonts/font = SubResource( 1 )
text = "Creature count: "

[node name="Count_Label2" type="Label" parent="Labels/SimInfo"]
margin_top = 54.0
margin_right = 105.0
margin_bottom = 70.0
custom_fonts/font = SubResource( 1 )
text = "Species1 count: "

[node name="Count_Label3" type="Label" parent="Labels/SimInfo"]
margin_top = 72.0
margin_right = 105.0
margin_bottom = 88.0
custom_fonts/font = SubResource( 1 )
text = "Species2 count: "

[node name="Food_Count_Label" type="Label" parent="Labels/SimInfo"]
margin_top = 90.0
margin_right = 105.0
margin_bottom = 106.0
custom_fonts/font = SubResource( 1 )
text = "Food count: "

[node name="EngineInfo" type="VBoxContainer" parent="Labels"]
margin_top = 174.0
margin_right = 105.0
margin_bottom = 208.0
custom_constants/separation = 2

[node name="Engine_Label" type="Label" parent="Labels/EngineInfo"]
margin_right = 105.0
margin_bottom = 16.0
custom_fonts/font = SubResource( 1 )
text = "Godot version:"

[node name="Build_Label" type="Label" parent="Labels/EngineInfo"]
margin_top = 18.0
margin_right = 105.0
margin_bottom = 34.0
custom_fonts/font = SubResource( 1 )
text = "Build Version:"
__meta__ = {
"_edit_use_anchors_": false
}
